--- a/projects.qmd
+++ b/projects.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Data Visualization"
+title: "Projects"
 listing:
-  contents: dataviz
+  contents: projects
   sort: "date desc"
   type: default
   categories: true
@@ -11,3 +11,4 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
+
