--- a/dataviz/tree-equity/index.qmd
+++ b/dataviz/tree-equity/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Visualizing Public Support for Government Surveillance"
+title: "Trees for the Rich? Visualizing Tree Equity Gap"
 date: 12/20/2022
 author:
   - name: Zhaowen Guo
@@ -13,6 +13,6 @@ format:
     number-sections: true
 link-citations: yes
 categories: [code, analysis, visualization]
-image: "support_surveillance_map.png"
+image: "tree_equity.png"
 ---
 
