add one blog post

--- a/statistics/rasch-hlm/index.qmd
+++ b/statistics/rasch-hlm/index.qmd
@@ -11,7 +11,7 @@ format:
     code-fold: false
     code-tools: false
     toc: false
-    number-sections: true
+    number-sections: false
 link-citations: yes
 categories: [code, statistics, psychometrics]
 image: "equivalence.png"
