--- a/dataviz/geofacet-hexbin/index.qmd
+++ b/dataviz/geofacet-hexbin/index.qmd
@@ -11,7 +11,7 @@ format:
     code-fold: false
     code-tools: false
     toc: false
-    number-sections: true
+    number-sections: false
 link-citations: yes
 categories: [code, visualization, greenspace]
 image: "tree-equity-geofacet.png"
