--- a/dataviz/geofacet-hexbin/index.qmd
+++ b/dataviz/geofacet-hexbin/index.qmd
@@ -12,7 +12,7 @@ format:
     code-tools: false
     toc: false
     number-sections: false
-link-citations: yes
+link-citations: true
 categories: [code, visualization, greenspace]
 image: "tree-equity-geofacet.png"
 ---
