--- a/dataviz/tidytuesday-bob-ross/index.qmd
+++ b/dataviz/tidytuesday-bob-ross/index.qmd
@@ -12,7 +12,7 @@ format:
     code-tools: false
     toc: false
     number-sections: false
-link-citations: yes
+link-citations: true
 categories: [code, visualization, tidytuesday]
 image: "ross-paintings.png"
 ---
