--- a/dataviz/green-space-gunshot-map/index.qmd
+++ b/dataviz/green-space-gunshot-map/index.qmd
@@ -13,7 +13,7 @@ format:
     toc: false
     number-sections: false
 link-citations: true
-categories: [code, visualization, greenspace]
+categories: [code, visualization, spatial data]
 image: "gunshot_osm_dc2021.png"
 ---
 
