--- a/dataviz/tree-gunshot/index.qmd
+++ b/dataviz/tree-gunshot/index.qmd
@@ -13,7 +13,7 @@ format:
     toc: false
     number-sections: false
 link-citations: true
-categories: [code, visualization, greenspace]
+categories: [code, visualization, spatial data]
 image: "dc-gunshot-time.png"
 ---
 
