--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ about:
 ---
 
 
-I am a PhD candidate at the University of Washington, where I combine my expertise in both social and data science to develop and enhance metrics using innovative data collection and psychometric techniques. 
+I am a PhD candidate at the University of Washington, where I combine my expertise in both social and data science to develop and enhance metrics using experimental and observational data, along with psychometric and NLP techniques. 
 
 I enjoy connecting data from various sources, including administrative data, survey data, text data, image data, and spatial data, to deliver insightful analyses and support impact evaluations. My passion lies in communicating my findings through engaging data visualizations and promoting equity and inclusion in data science by knowledge sharing. 
 
