--- a/statistics/nlp-ai-news/index.qmd
+++ b/statistics/nlp-ai-news/index.qmd
@@ -81,7 +81,7 @@ To accurately label sentiment polarity, having robust labeled data for training 
 
     Words like "revolution" or "revolutionize" often implied positive sentiment, but were sometimes misinterpreted as negative by these models. We manually corrected these cases to ensure accuracy.
 
-To guarantee enough training data for train our classifier, as this data will need to be further divided into training and test sets, we randomly selected additional news headlines and repeated the process until we had at least 1,000 labeled headlines with consensus between human annotators and the models.
+To guarantee enough training data for training our classifier, as this data will need to be further divided into training and test sets, we randomly selected additional news headlines and repeated the process until we had at least 1,000 labeled headlines with consensus between human annotators and the models.
 
 To train our sentiment classifier, we fine-tuned a pre-trained language model [RoBERTa](https://huggingface.co/docs/transformers/en/model_doc/roberta) using PyTorch. We allocated 90% of the data as training set and 10% as the test set, ensuring the test set remained untouched throughout training. Our model parameters included a learning rate of 1e-5, a batch size of 32, 10 epochs, and AdamW as the optimizer. To address challenges like unstable gradients, we further implemented several techniques, including
 
@@ -99,7 +99,7 @@ To dig deeper into emotions, we used [DistilBERT](https://huggingface.co/docs/tr
 
 From the automated classification results, we manually reviewed 1,000 observations and decided to focus on fear as a key emotion for further analysis. This decision was driven by both technical and theoretical considerations. DistilBERT's binary classification for fear was more reliable compared to its multi-label classification of other emotions. Furthermore, since our earlier analysis showed an overall hype with a majority of positive sentiments, exploring negatively charged news headlines could offer insights into how media highlights potential risks and challenges related to AI.
 
-So the next task was to improve the identification of fear in news headlines. To better validate these binary labels, we turned to Llama 2 with few-shot learning. We started by running Llama 2 on 1,000 news headlines and refined our prompt by specifying the role of the LLM, the task, allowing for uncertainty with a "don't know" category, rationale for classifying fear, and examples of fear and non-fear. For this round, we asked Llama 2 to provide a rationale for its judgement to ensure the model's reasoning aligned with the task.
+So the next task was to improve the identification of fear in news headlines. To better validate these binary labels, we turned to Llama 2 with few-shot learning. We started by running Llama 2 on 1,000 news headlines and refined our prompt by specifying the role of the LLM, the task, rationale for classifying fear, and examples of fear and non-fear, while allowing for uncertainty with a "don't know" category. For this round, we asked Llama 2 to provide a rationale for its judgement to ensure the model's reasoning aligned with the task.
 
 After examining the classified results, we identified several issues:
 
